--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,44 @@
     transform: rotate(360deg);
   }
 }
+
+.iconBtn {
+  transition: all 0.2s !important;
+  cursor: pointer;
+}
+
+.iconBtn:hover {
+  background-color: #dededee3 !important;
+  box-shadow: 0px 7px 6px rgba(0, 0, 0, 0.2);
+}
+
+.toDoCard {
+  transition: all 0.5s !important;
+  cursor: pointer;
+}
+.toDoCard:hover {
+  padding-bottom: 20px;
+  padding-top: 20px;
+  box-shadow: 0px 7px 6px rgba(0, 0, 0, 0.2);
+}
+
+@font-face {
+  font-family: Quicksand;
+  src: url(/public/font/Quicksand-Bold.ttf);
+  font-weight: bold;
+}
+@font-face {
+  font-family: Quicksand;
+  src: url(/public/font/Quicksand-Light.ttf);
+  font-weight: 100;
+}
+@font-face {
+  font-family: Quicksand;
+  src: url(/public/font/Quicksand-Regular.ttf);
+  font-weight: normal;
+}
+@font-face {
+  font-family: Quicksand;
+  src: url(/public/font/Quicksand-Medium.ttf);
+  font-weight: 500;
+}
